<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/garage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/blue_800"
    tools:context=".GarageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/garage_header"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/garageCloseButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/symbol_close"
                android:textSize="20sp"
                android:backgroundTint="@drawable/selector_button_general"
                android:textColor="@drawable/selector_button_general_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garage_text_gold"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/gold_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_gold"
                android:layout_marginHorizontal="5dp"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:background="@color/blue_950"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/upgrade_generic"
                    android:layout_marginHorizontal="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_armor_basic_caps"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/item_armor_basic_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_armor_basic_stats"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                />
                <Button
                    android:id="@+id/btn_armor_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/item_equip"
                    android:layout_gravity="right"
                    android:backgroundTint="@drawable/selector_button_general"
                    android:textColor="@drawable/selector_button_general_text"
                />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:background="@color/blue_950"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/upgrade_generic"
                    android:layout_marginHorizontal="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_armor_upgrade1_caps"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/item_armor_upgrade1_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_armor_upgrade1_stats"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_armor_upgrade1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/item_equip"
                    android:layout_gravity="right"
                    android:backgroundTint="@drawable/selector_button_general"
                    android:textColor="@drawable/selector_button_general_text"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:background="@color/blue_950"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/upgrade_generic"
                    android:layout_marginHorizontal="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_armor_upgrade2_caps"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/item_armor_upgrade2_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_armor_upgrade2_stats"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_armor_upgrade2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/item_equip"
                    android:layout_gravity="right"
                    android:backgroundTint="@drawable/selector_button_general"
                    android:textColor="@drawable/selector_button_general_text"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>