<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:background="@color/blue_800"

    tools:context=".PauseMenuDialog"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_pause_menu_header"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/button_resume"
        android:backgroundTint="@drawable/selector_button_general"
        android:textColor="@drawable/selector_button_general_text"
        />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/button_exit"
        android:backgroundTint="@drawable/selector_button_general"
        android:textColor="@drawable/selector_button_general_text"
        />
</LinearLayout>