<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/blue_800"

    tools:context=".GarageInsufficientDialog"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_purchase_failed_header"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/no_purchase_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/purchase_dialog_failed_text"
        android:textAlignment="center"
    />

    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/generic_dialog_text_ok"
        android:textSize="20sp"
        android:backgroundTint="@drawable/selector_button_general"
        android:textColor="@drawable/selector_button_general_text"
    />
</LinearLayout>